--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Task_kakao"
         tools:targetApi="31">
         <activity
+            android:name=".detail_page"
+            android:exported="false" />
+        <activity
             android:name=".items"
             android:exported="false" />
         <activity
